Lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt
Rule 2     program -> program stmt
Rule 3     stmt -> expr ;
Rule 4     stmt -> RETURN expr ;
Rule 5     stmt -> BREAK ;
Rule 6     stmt -> CONTINUE ;
Rule 7     stmt -> ;
Rule 8     stmt -> { }
Rule 9     stmt_list -> stmt
Rule 10    stmt_list -> stmt_list stmt
Rule 11    stmt -> { stmt_list }
Rule 12    stmt -> PRINT list ;
Rule 13    expr -> INTNUM
Rule 14    expr -> FLOATNUM
Rule 15    expr -> STR
Rule 16    expr -> expr ADD expr
Rule 17    expr -> expr SUB expr
Rule 18    expr -> expr MUL expr
Rule 19    expr -> expr DIV expr
Rule 20    expr -> expr DOT_ADD expr
Rule 21    expr -> expr DOT_SUB expr
Rule 22    expr -> expr DOT_MUL expr
Rule 23    expr -> expr DOT_DIV expr
Rule 24    expr -> expr GT expr
Rule 25    expr -> expr LT expr
Rule 26    expr -> expr GTE expr
Rule 27    expr -> expr LTE expr
Rule 28    expr -> expr EQ expr
Rule 29    expr -> expr NEQ expr
Rule 30    expr -> EYE ( expr )
Rule 31    expr -> ONES ( expr )
Rule 32    expr -> ZEROS ( expr )
Rule 33    expr -> lvalue ASSIGN expr
Rule 34    expr -> lvalue ADD_ASSIGN expr
Rule 35    expr -> lvalue SUB_ASSIGN expr
Rule 36    expr -> lvalue MUL_ASSIGN expr
Rule 37    expr -> lvalue DIV_ASSIGN expr
Rule 38    expr -> expr '
Rule 39    lvalue -> ID
Rule 40    expr -> SUB expr
Rule 41    expr -> lvalue
Rule 42    expr -> ( expr )
Rule 43    lvalue -> expr [ list ]
Rule 44    expr -> [ ]
Rule 45    expr -> [ list ]
Rule 46    list -> expr
Rule 47    list -> list , expr
Rule 48    stmt -> IF ( expr ) stmt
Rule 49    stmt -> IF ( expr ) stmt ELSE stmt
Rule 50    stmt -> WHILE ( expr ) stmt
Rule 51    range -> expr : expr
Rule 52    stmt -> FOR ID ASSIGN range stmt

Terminals, with rules where they appear

'                    : 38
(                    : 30 31 32 42 48 49 50
)                    : 30 31 32 42 48 49 50
,                    : 47
:                    : 51
;                    : 3 4 5 6 7 12
ADD                  : 16
ADD_ASSIGN           : 34
ASSIGN               : 33 52
BREAK                : 5
CONTINUE             : 6
DIV                  : 19
DIV_ASSIGN           : 37
DOT_ADD              : 20
DOT_DIV              : 23
DOT_MUL              : 22
DOT_SUB              : 21
ELSE                 : 49
EQ                   : 28
EYE                  : 30
FLOATNUM             : 14
FOR                  : 52
GT                   : 24
GTE                  : 26
ID                   : 39 52
IF                   : 48 49
INTNUM               : 13
LT                   : 25
LTE                  : 27
MUL                  : 18
MUL_ASSIGN           : 36
NEQ                  : 29
ONES                 : 31
PRINT                : 12
RETURN               : 4
STR                  : 15
SUB                  : 17 40
SUB_ASSIGN           : 35
WHILE                : 50
ZEROS                : 32
[                    : 43 44 45
]                    : 43 44 45
error                : 
{                    : 8 11
}                    : 8 11

Nonterminals, with rules where they appear

expr                 : 3 4 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 34 35 36 37 38 40 42 43 46 47 48 49 50 51 51
list                 : 12 43 45 47
lvalue               : 33 34 35 36 37 41
program              : 2 0
range                : 52
stmt                 : 1 2 9 10 48 49 49 50 52
stmt_list            : 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt
    (2) program -> . program stmt
    (3) stmt -> . expr ;
    (4) stmt -> . RETURN expr ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . CONTINUE ;
    (7) stmt -> . ;
    (8) stmt -> . { }
    (11) stmt -> . { stmt_list }
    (12) stmt -> . PRINT list ;
    (48) stmt -> . IF ( expr ) stmt
    (49) stmt -> . IF ( expr ) stmt ELSE stmt
    (50) stmt -> . WHILE ( expr ) stmt
    (52) stmt -> . FOR ID ASSIGN range stmt
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( expr )
    (31) expr -> . ONES ( expr )
    (32) expr -> . ZEROS ( expr )
    (33) expr -> . lvalue ASSIGN expr
    (34) expr -> . lvalue ADD_ASSIGN expr
    (35) expr -> . lvalue SUB_ASSIGN expr
    (36) expr -> . lvalue MUL_ASSIGN expr
    (37) expr -> . lvalue DIV_ASSIGN expr
    (38) expr -> . expr '
    (40) expr -> . SUB expr
    (41) expr -> . lvalue
    (42) expr -> . ( expr )
    (44) expr -> . [ ]
    (45) expr -> . [ list ]
    (39) lvalue -> . ID
    (43) lvalue -> . expr [ list ]

    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    ;               shift and go to state 4
    {               shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    program                        shift and go to state 1
    stmt                           shift and go to state 2
    expr                           shift and go to state 3
    lvalue                         shift and go to state 22

state 1

    (0) S' -> program .
    (2) program -> program . stmt
    (3) stmt -> . expr ;
    (4) stmt -> . RETURN expr ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . CONTINUE ;
    (7) stmt -> . ;
    (8) stmt -> . { }
    (11) stmt -> . { stmt_list }
    (12) stmt -> . PRINT list ;
    (48) stmt -> . IF ( expr ) stmt
    (49) stmt -> . IF ( expr ) stmt ELSE stmt
    (50) stmt -> . WHILE ( expr ) stmt
    (52) stmt -> . FOR ID ASSIGN range stmt
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( expr )
    (31) expr -> . ONES ( expr )
    (32) expr -> . ZEROS ( expr )
    (33) expr -> . lvalue ASSIGN expr
    (34) expr -> . lvalue ADD_ASSIGN expr
    (35) expr -> . lvalue SUB_ASSIGN expr
    (36) expr -> . lvalue MUL_ASSIGN expr
    (37) expr -> . lvalue DIV_ASSIGN expr
    (38) expr -> . expr '
    (40) expr -> . SUB expr
    (41) expr -> . lvalue
    (42) expr -> . ( expr )
    (44) expr -> . [ ]
    (45) expr -> . [ list ]
    (39) lvalue -> . ID
    (43) lvalue -> . expr [ list ]

    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    ;               shift and go to state 4
    {               shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    stmt                           shift and go to state 24
    expr                           shift and go to state 3
    lvalue                         shift and go to state 22

state 2

    (1) program -> stmt .

    RETURN          reduce using rule 1 (program -> stmt .)
    BREAK           reduce using rule 1 (program -> stmt .)
    CONTINUE        reduce using rule 1 (program -> stmt .)
    ;               reduce using rule 1 (program -> stmt .)
    {               reduce using rule 1 (program -> stmt .)
    PRINT           reduce using rule 1 (program -> stmt .)
    IF              reduce using rule 1 (program -> stmt .)
    WHILE           reduce using rule 1 (program -> stmt .)
    FOR             reduce using rule 1 (program -> stmt .)
    INTNUM          reduce using rule 1 (program -> stmt .)
    FLOATNUM        reduce using rule 1 (program -> stmt .)
    STR             reduce using rule 1 (program -> stmt .)
    EYE             reduce using rule 1 (program -> stmt .)
    ONES            reduce using rule 1 (program -> stmt .)
    ZEROS           reduce using rule 1 (program -> stmt .)
    SUB             reduce using rule 1 (program -> stmt .)
    (               reduce using rule 1 (program -> stmt .)
    [               reduce using rule 1 (program -> stmt .)
    ID              reduce using rule 1 (program -> stmt .)
    $end            reduce using rule 1 (program -> stmt .)


state 3

    (3) stmt -> expr . ;
    (16) expr -> expr . ADD expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . DOT_ADD expr
    (21) expr -> expr . DOT_SUB expr
    (22) expr -> expr . DOT_MUL expr
    (23) expr -> expr . DOT_DIV expr
    (24) expr -> expr . GT expr
    (25) expr -> expr . LT expr
    (26) expr -> expr . GTE expr
    (27) expr -> expr . LTE expr
    (28) expr -> expr . EQ expr
    (29) expr -> expr . NEQ expr
    (38) expr -> expr . '
    (43) lvalue -> expr . [ list ]

    ;               shift and go to state 25
    ADD             shift and go to state 26
    SUB             shift and go to state 27
    MUL             shift and go to state 28
    DIV             shift and go to state 29
    DOT_ADD         shift and go to state 30
    DOT_SUB         shift and go to state 31
    DOT_MUL         shift and go to state 32
    DOT_DIV         shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35
    GTE             shift and go to state 36
    LTE             shift and go to state 37
    EQ              shift and go to state 38
    NEQ             shift and go to state 39
    '               shift and go to state 40
    [               shift and go to state 41


state 4

    (7) stmt -> ; .

    RETURN          reduce using rule 7 (stmt -> ; .)
    BREAK           reduce using rule 7 (stmt -> ; .)
    CONTINUE        reduce using rule 7 (stmt -> ; .)
    ;               reduce using rule 7 (stmt -> ; .)
    {               reduce using rule 7 (stmt -> ; .)
    PRINT           reduce using rule 7 (stmt -> ; .)
    IF              reduce using rule 7 (stmt -> ; .)
    WHILE           reduce using rule 7 (stmt -> ; .)
    FOR             reduce using rule 7 (stmt -> ; .)
    INTNUM          reduce using rule 7 (stmt -> ; .)
    FLOATNUM        reduce using rule 7 (stmt -> ; .)
    STR             reduce using rule 7 (stmt -> ; .)
    EYE             reduce using rule 7 (stmt -> ; .)
    ONES            reduce using rule 7 (stmt -> ; .)
    ZEROS           reduce using rule 7 (stmt -> ; .)
    SUB             reduce using rule 7 (stmt -> ; .)
    (               reduce using rule 7 (stmt -> ; .)
    [               reduce using rule 7 (stmt -> ; .)
    ID              reduce using rule 7 (stmt -> ; .)
    $end            reduce using rule 7 (stmt -> ; .)
    }               reduce using rule 7 (stmt -> ; .)
    ELSE            reduce using rule 7 (stmt -> ; .)


state 5

    (4) stmt -> RETURN . expr ;
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( expr )
    (31) expr -> . ONES ( expr )
    (32) expr -> . ZEROS ( expr )
    (33) expr -> . lvalue ASSIGN expr
    (34) expr -> . lvalue ADD_ASSIGN expr
    (35) expr -> . lvalue SUB_ASSIGN expr
    (36) expr -> . lvalue MUL_ASSIGN expr
    (37) expr -> . lvalue DIV_ASSIGN expr
    (38) expr -> . expr '
    (40) expr -> . SUB expr
    (41) expr -> . lvalue
    (42) expr -> . ( expr )
    (44) expr -> . [ ]
    (45) expr -> . [ list ]
    (39) lvalue -> . ID
    (43) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    expr                           shift and go to state 42
    lvalue                         shift and go to state 22

state 6

    (5) stmt -> BREAK . ;

    ;               shift and go to state 43


state 7

    (6) stmt -> CONTINUE . ;

    ;               shift and go to state 44


state 8

    (8) stmt -> { . }
    (11) stmt -> { . stmt_list }
    (9) stmt_list -> . stmt
    (10) stmt_list -> . stmt_list stmt
    (3) stmt -> . expr ;
    (4) stmt -> . RETURN expr ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . CONTINUE ;
    (7) stmt -> . ;
    (8) stmt -> . { }
    (11) stmt -> . { stmt_list }
    (12) stmt -> . PRINT list ;
    (48) stmt -> . IF ( expr ) stmt
    (49) stmt -> . IF ( expr ) stmt ELSE stmt
    (50) stmt -> . WHILE ( expr ) stmt
    (52) stmt -> . FOR ID ASSIGN range stmt
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( expr )
    (31) expr -> . ONES ( expr )
    (32) expr -> . ZEROS ( expr )
    (33) expr -> . lvalue ASSIGN expr
    (34) expr -> . lvalue ADD_ASSIGN expr
    (35) expr -> . lvalue SUB_ASSIGN expr
    (36) expr -> . lvalue MUL_ASSIGN expr
    (37) expr -> . lvalue DIV_ASSIGN expr
    (38) expr -> . expr '
    (40) expr -> . SUB expr
    (41) expr -> . lvalue
    (42) expr -> . ( expr )
    (44) expr -> . [ ]
    (45) expr -> . [ list ]
    (39) lvalue -> . ID
    (43) lvalue -> . expr [ list ]

    }               shift and go to state 45
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    ;               shift and go to state 4
    {               shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    stmt_list                      shift and go to state 46
    stmt                           shift and go to state 47
    expr                           shift and go to state 3
    lvalue                         shift and go to state 22

state 9

    (12) stmt -> PRINT . list ;
    (46) list -> . expr
    (47) list -> . list , expr
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( expr )
    (31) expr -> . ONES ( expr )
    (32) expr -> . ZEROS ( expr )
    (33) expr -> . lvalue ASSIGN expr
    (34) expr -> . lvalue ADD_ASSIGN expr
    (35) expr -> . lvalue SUB_ASSIGN expr
    (36) expr -> . lvalue MUL_ASSIGN expr
    (37) expr -> . lvalue DIV_ASSIGN expr
    (38) expr -> . expr '
    (40) expr -> . SUB expr
    (41) expr -> . lvalue
    (42) expr -> . ( expr )
    (44) expr -> . [ ]
    (45) expr -> . [ list ]
    (39) lvalue -> . ID
    (43) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    list                           shift and go to state 48
    expr                           shift and go to state 49
    lvalue                         shift and go to state 22

state 10

    (48) stmt -> IF . ( expr ) stmt
    (49) stmt -> IF . ( expr ) stmt ELSE stmt

    (               shift and go to state 50


state 11

    (42) expr -> ( . expr )
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( expr )
    (31) expr -> . ONES ( expr )
    (32) expr -> . ZEROS ( expr )
    (33) expr -> . lvalue ASSIGN expr
    (34) expr -> . lvalue ADD_ASSIGN expr
    (35) expr -> . lvalue SUB_ASSIGN expr
    (36) expr -> . lvalue MUL_ASSIGN expr
    (37) expr -> . lvalue DIV_ASSIGN expr
    (38) expr -> . expr '
    (40) expr -> . SUB expr
    (41) expr -> . lvalue
    (42) expr -> . ( expr )
    (44) expr -> . [ ]
    (45) expr -> . [ list ]
    (39) lvalue -> . ID
    (43) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    expr                           shift and go to state 51
    lvalue                         shift and go to state 22

state 12

    (50) stmt -> WHILE . ( expr ) stmt

    (               shift and go to state 52


state 13

    (52) stmt -> FOR . ID ASSIGN range stmt

    ID              shift and go to state 53


state 14

    (39) lvalue -> ID .

    ASSIGN          reduce using rule 39 (lvalue -> ID .)
    ADD_ASSIGN      reduce using rule 39 (lvalue -> ID .)
    SUB_ASSIGN      reduce using rule 39 (lvalue -> ID .)
    MUL_ASSIGN      reduce using rule 39 (lvalue -> ID .)
    DIV_ASSIGN      reduce using rule 39 (lvalue -> ID .)
    ;               reduce using rule 39 (lvalue -> ID .)
    ADD             reduce using rule 39 (lvalue -> ID .)
    SUB             reduce using rule 39 (lvalue -> ID .)
    MUL             reduce using rule 39 (lvalue -> ID .)
    DIV             reduce using rule 39 (lvalue -> ID .)
    DOT_ADD         reduce using rule 39 (lvalue -> ID .)
    DOT_SUB         reduce using rule 39 (lvalue -> ID .)
    DOT_MUL         reduce using rule 39 (lvalue -> ID .)
    DOT_DIV         reduce using rule 39 (lvalue -> ID .)
    GT              reduce using rule 39 (lvalue -> ID .)
    LT              reduce using rule 39 (lvalue -> ID .)
    GTE             reduce using rule 39 (lvalue -> ID .)
    LTE             reduce using rule 39 (lvalue -> ID .)
    EQ              reduce using rule 39 (lvalue -> ID .)
    NEQ             reduce using rule 39 (lvalue -> ID .)
    '               reduce using rule 39 (lvalue -> ID .)
    [               reduce using rule 39 (lvalue -> ID .)
    ,               reduce using rule 39 (lvalue -> ID .)
    )               reduce using rule 39 (lvalue -> ID .)
    ]               reduce using rule 39 (lvalue -> ID .)
    :               reduce using rule 39 (lvalue -> ID .)
    RETURN          reduce using rule 39 (lvalue -> ID .)
    BREAK           reduce using rule 39 (lvalue -> ID .)
    CONTINUE        reduce using rule 39 (lvalue -> ID .)
    {               reduce using rule 39 (lvalue -> ID .)
    PRINT           reduce using rule 39 (lvalue -> ID .)
    IF              reduce using rule 39 (lvalue -> ID .)
    WHILE           reduce using rule 39 (lvalue -> ID .)
    FOR             reduce using rule 39 (lvalue -> ID .)
    INTNUM          reduce using rule 39 (lvalue -> ID .)
    FLOATNUM        reduce using rule 39 (lvalue -> ID .)
    STR             reduce using rule 39 (lvalue -> ID .)
    EYE             reduce using rule 39 (lvalue -> ID .)
    ONES            reduce using rule 39 (lvalue -> ID .)
    ZEROS           reduce using rule 39 (lvalue -> ID .)
    (               reduce using rule 39 (lvalue -> ID .)
    ID              reduce using rule 39 (lvalue -> ID .)


state 15

    (13) expr -> INTNUM .

    ;               reduce using rule 13 (expr -> INTNUM .)
    ADD             reduce using rule 13 (expr -> INTNUM .)
    SUB             reduce using rule 13 (expr -> INTNUM .)
    MUL             reduce using rule 13 (expr -> INTNUM .)
    DIV             reduce using rule 13 (expr -> INTNUM .)
    DOT_ADD         reduce using rule 13 (expr -> INTNUM .)
    DOT_SUB         reduce using rule 13 (expr -> INTNUM .)
    DOT_MUL         reduce using rule 13 (expr -> INTNUM .)
    DOT_DIV         reduce using rule 13 (expr -> INTNUM .)
    GT              reduce using rule 13 (expr -> INTNUM .)
    LT              reduce using rule 13 (expr -> INTNUM .)
    GTE             reduce using rule 13 (expr -> INTNUM .)
    LTE             reduce using rule 13 (expr -> INTNUM .)
    EQ              reduce using rule 13 (expr -> INTNUM .)
    NEQ             reduce using rule 13 (expr -> INTNUM .)
    '               reduce using rule 13 (expr -> INTNUM .)
    [               reduce using rule 13 (expr -> INTNUM .)
    ,               reduce using rule 13 (expr -> INTNUM .)
    )               reduce using rule 13 (expr -> INTNUM .)
    ]               reduce using rule 13 (expr -> INTNUM .)
    :               reduce using rule 13 (expr -> INTNUM .)
    RETURN          reduce using rule 13 (expr -> INTNUM .)
    BREAK           reduce using rule 13 (expr -> INTNUM .)
    CONTINUE        reduce using rule 13 (expr -> INTNUM .)
    {               reduce using rule 13 (expr -> INTNUM .)
    PRINT           reduce using rule 13 (expr -> INTNUM .)
    IF              reduce using rule 13 (expr -> INTNUM .)
    WHILE           reduce using rule 13 (expr -> INTNUM .)
    FOR             reduce using rule 13 (expr -> INTNUM .)
    INTNUM          reduce using rule 13 (expr -> INTNUM .)
    FLOATNUM        reduce using rule 13 (expr -> INTNUM .)
    STR             reduce using rule 13 (expr -> INTNUM .)
    EYE             reduce using rule 13 (expr -> INTNUM .)
    ONES            reduce using rule 13 (expr -> INTNUM .)
    ZEROS           reduce using rule 13 (expr -> INTNUM .)
    (               reduce using rule 13 (expr -> INTNUM .)
    ID              reduce using rule 13 (expr -> INTNUM .)


state 16

    (14) expr -> FLOATNUM .
